Changed URL in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
 	<head>
 
-	<meta http-equiv="refresh" content="0; url=https://lukaszmodelski.github.io/WWDC/dist/index.html" />
+	<meta http-equiv="refresh" content="0; url=https://lukaszmodelski.github.io/recruitment-task/dist/index.html" />
 
 
 
